objects/External_Application__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Authorization_Server_Response__c</fullName>
        <label>Authorization Server Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Callback_URL__c</fullName>
        <label>Callback URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_secret__c</fullName>
        <label>Consumer secret</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instance_URL__c</fullName>
        <label>Instance URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issued_at__c</fullName>
        <label>Issued at</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outh_Code__c</fullName>
        <label>Outh Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh_Token</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Domain__c</fullName>
        <label>Salesforce Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <type>TextArea</type>
    </fields>
    <label>External Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Application</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>